# crosflowxtalk

./: .env.example  .gitignore  ACTUAL_STATUS.md  ALL_DONE.md  API_OFFERING.md  AUDIT_REPORT.md  BRUTAL_HONEST_AUDIT.md  COMPLETE_FINAL_STATUS.md  COMPLETION_REPORT.md  CRITICAL_IMPROVEMENTS.md  DEPLOY_TO_PRODUCTION.md  FEATURES.md  FINAL_STATUS.md  FINAL_WORKING_STATUS.md  FINISHED.md  FRONTEND_BACKEND_AUDIT.md  HONEST_ASSESSMENT.md  MONGODB_CONFIRMATION.md  PERFECTION_AUDIT.md  PERFECTION_TEST_REPORT.md  PERFECT_100_SECURITY.md  PRODUCTION_READY.md  QUICK_FIX_COMMANDS.md  README.md  SECURITY_AUDIT.md  SECURITY_FIXES_COMPLETE.md  SETUP_GUIDE.md  TESTING_VERIFICATION.md  package-lock.json  package.json
backend/: README.md  package.json
backend/src/: index.ts
backend/src/config/: database.ts
backend/src/middleware/: auth.ts  errorHandler.ts  logger.ts  rateLimiter.ts  sanitize.ts  validation.ts
backend/src/models/: BankAccount.ts  Loan.ts  StakePosition.ts  Transaction.ts  (+2 more)
contracts/: Cargo.toml
contracts/governance-token/: Cargo.toml
contracts/governance-token/src/: lib.rs
contracts/liquidity-aggregator/: Cargo.toml
contracts/liquidity-aggregator/src/: lib.rs
frontend/: next.config.js  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chains.tsx  error-boundary.tsx  features.tsx  footer.tsx  header.tsx  hero.tsx  providers.tsx  stats.tsx  swap-interface.tsx  transaction-modal.tsx
frontend/lib/: api-client.ts  banking-service.ts  staking-service.ts  swap-service.ts  validation.ts  wagmi.ts  wallet-context.tsx  yield-service.ts
(+27 files in other folders)
