[workspace]
members = [
    "liquidity-aggregator",
    "yield-optimizer",
    "lending-vaults",
    "nft-bridge",
    "governance-token",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["CrossFlow Team"]

[workspace.dependencies]
l1x-sdk = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = { version = "1.0", features = ["derive"] }
