[package]
name = "governance-token"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
l1x-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
borsh.workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
